# AlphaChannelSeparator

./: CMakeLists.txt  imagewidget.cpp  imagewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
icons/: icons.qrc
